<resources>
    <string name="app_name">ParkIT</string>
    <string name="actionbar"><font color='#ffffff'>PARK</font><font color='#000000'>IT</font></string>
    <string name="myaccount">My Account</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="terms_conditions_text">By using this app the User agrees to the Terms and Conditions contained herein.
        \n\n
        <b><u>USER\'s RESPONSIBILITIES</u></b>
        \n\n
        <i>It is your responsibility to:</i>
        \n
        1. Understand the terms and conditions of this app as these may change from time to time\n
        2. Ensure you have an active Parking Session that is valid and can be viewed on your device whilst the vehicle is parked in the AUT carpark\n
        3. Monitor your parking session and leave at the appropriate time <b>OR</b> extend your parking Session
        \n\n
        <i>You understand that:</i>
        \n
        1. Parking in an AUT carpark space without a valid parking session may result in a breach notice being issued on your vehicle\n
        \n
        <b><u>PARKING ENFORCEMENT</u></b>
        \n
        AUT uses the services of Parking Enforcement Services phone 0800 727 536 and Auckland Towing Company phone 09 3780780

    </string>

    <string name="strtprk">Start Parking</string>
    <string name="total_1_50_per_hour">Total: $1.50 per hour</string>
    <string name="ends_at">Ends at:</string>
    <string name="car_registration">Car Registration</string>
    <string name="enter_space_number">Enter Parking Space Number</string>
    <string name="change">CHANGE</string>
    <string name="_0">0</string>
    <string name="titlebar">titleBar</string>
    <string name="search">SEARCH</string>
    <string name="search_by_licence_plate"><font size="16">SEARCH BY LICENCE PLATE</font></string>
    <string name="search_by_carpark_id"><font size="16">SEARCH BY CARPARK ID</font></string>
    <string name="extend_parking">Extend Parking</string>
    <string name="licence_plate">FUJ626</string>
    <string name="space_number">PARKING SPACE A17</string>
    <string name="start_new_session">START NEW SESSION</string>
    <string name="menubar">menuBar</string>
    <string-array name="cars_list"></string-array>

</resources>
