<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greyBackground"
        android:fitsSystemWindows="true"
        android:gravity="top|center_vertical"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
                android:id="@+id/licence_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:includeFontPadding="true"
                android:text="@string/licence_plate"
                android:textColor="@color/colorBlack"
                android:textScaleX="1.1"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/parking_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:text="@string/space_number"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/licence_plate" />

        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layoutDirection="rtl"
                android:background="@drawable/countdown_timer_background"
                android:indeterminate="false"
                android:progress="65"
                android:progressDrawable="@drawable/countdown_timer"
                app:layout_constraintBottom_toTopOf="@+id/extend_parking"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parking_space" />

        <Button
                android:id="@+id/extend_parking"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_edges"
                android:includeFontPadding="true"
                android:text="@string/extend_parking"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
